# aitoolz

./: .gitignore  MANIFEST.in  README.md  find_imports.py  noxfile.py  pyproject.toml
.github/workflows/: python-package-ci.yml  python-package.yml
src/aitoolz/: find_imports.py  make_project.py
src/aitoolz/resources/pkg_templates/: .gitignore  README.md  noxfile.py  pyproject.toml  python-package.yml
tests/: test_find_imports.py  test_hello_world.py  test_make_project.py
tests/resources/python_pkg/: module_a.py
tests/resources/python_pkg/sub_pkg/: module_b.py
