[project]
name = "aitoolz"
version = "0.1.0.dev0"
authors = [
  { name="Alex Ioannides", email="alex@bodyworkml.com" },
]
maintainers = [
  { name="Alex Ioannides", email="alex@bodyworkml.com" },
]
description = "Python toolz, by Alex Ioannides (AI)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
[project.optional-dependencies]
dev = [
    "black==23.9.1",
    "mypy==1.5.1",
    "nox==2023.4.22",
    "pytest==7.4.2",
    "ruff==0.0.290",
]

[project.urls]
"Homepage" = "https://github.com/AlexIoannides/aitoolz"
"Bug Tracker" = "https://github.com/AlexIoannides/aitoolz/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 88
select = [
  "D",   # pydocstyle
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "D203",    # fix pydocstyle warning
  "D213",    # fix pydocstyle warning
]
[tool.ruff.per-file-ignores]
"tests/*" = ["D103"]
